[package]
name = "rust-async-spider"
version = "0.1.0"
authors = ["zzy <ask@rusthub.org>"]
edition = "2021"
resolver = "2"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
surf = "2.3"
scraper = "0.15"
colored = "2.0"

# [profile.dev]
# split-debuginfo = "unpacked"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
