[package]
name = "rust-async-spider"
version = "0.1.0"
authors = ["zzy <ask@rusthub.org>"]
edition = "2021"
resolver = "2"

[dependencies]
scraper = "0.20"
colored = "2.1"

tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
reqwest = "0.12"

# [profile.dev]
# split-debuginfo = "unpacked"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
